[package]
name = "endur"
version = "0.1.0"
edition = "2021"

[lib]
name = "endur"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
ldk-node = { git = "https://github.com/lightningdevkit/ldk-node.git", rev = "1525255222cd7a48de3a9301a3053e8a4e3d1a86" }